# sales-prompter

./: .env.local.example  .gitignore  .vercelignore  README.md  SalesPrompter_Development_Plan.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_transactions.csv  server.py  vercel.json
api/: _db.py  _rules.py  auth.py  dashboard.py  insights.py  model_train.py  products.py  promotions.py  recommendations.py  retailers.py  salesmen.py  scoring_config.py  transactions.py  visits.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/products/: page.tsx
app/promotions/: page.tsx
app/retailers/: page.tsx
app/retailers/[id]/: page.tsx
app/salesman/: page.tsx
app/salesman/[id]/: page.tsx
app/settings/: page.tsx
components/recommendations/: InsightPanel.tsx  InsightSummary.tsx  PromoTag.tsx  RecommendationCard.tsx  ScoreBadge.tsx
components/retailers/: PurchaseHistory.tsx  RetailerCard.tsx
components/salesman/: RetailerVisitCard.tsx  SalesmanView.tsx
components/shared/: AuthGate.tsx  Background.tsx  Footer.tsx  Navbar.tsx  PasswordGate.tsx
components/upload/: CsvDropzone.tsx
lib/: animations.ts  api.ts  auth.ts  types.ts  utils.ts
scripts/: sample_upload.csv  seed.py
supabase/migrations/: 001_initial_schema.sql  002_insights_table.sql  003_config_table.sql
