[project]
name = "sales-prompter"
version = "0.1.0"
description = "SalesPrompter — Next Best Product Engine for Distributor Salesmen"
authors = [{ name = "Revino B Akmaldi" }]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "supabase>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "implicit>=0.7.0",
    "scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["api*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
